INIT\FIX\UPDATE\APPEND\

[AF-1]-initial_docs
    UPDATE:добавлен Readme файл. Добавлены цели проекта

[AF-2]-structure
    INIT:Создана первоначальная структура проекта.

[AF-10]-users_models
    INIT:Создана модель User. Добавлены админские роуты для создания пользователя и просморта списка пользователей
    