@@ -1,7 +1,7 @@
-DB_HOST=localhost
+DB_HOST=app_db
 DB_PORT=5432
-DB_NAME=fast_api
-DB_USER=postgres
-DB_PASS=postgres
+DB_NAME=app
+DB_USER=app
+DB_PASS=app
 
 SECRET_AUTH=jkljfsdipoi432890fsjdk42mnpudsanmeqvhzkdf31fd
