@@ -1,0 +1,28 @@
+[loggers]
+keys=root,uvicorn
+
+[handlers]
+keys=console
+
+[formatters]
+keys=standard
+
+[logger_root]
+level=DEBUG
+handlers=console
+formatter=standard
+
+[logger_uvicorn]
+propagate=0
+handlers=console
+formatter=standard
+qualname=uvicorn
+
+[handler_console]
+class=logging.StreamHandler
+level=DEBUG
+formatter=standard
+stream=ext://sys.stderr
+
+[formatter_standard]
+format=[%(asctime)s] [%(levelname)s] [%(name)s] %(message)s
