@@ -4,11 +4,12 @@ from typing import Optional
 import uuid
 
 from sqlalchemy import ForeignKey
-from sqlalchemy import String, Integer
+from sqlalchemy import Integer
+from sqlalchemy import String
 from sqlalchemy import func
 from sqlalchemy.orm import DeclarativeBase
-from sqlalchemy.orm import Mapped
 from sqlalchemy.orm import mapped_column
+from sqlalchemy.orm import Mapped
 from sqlalchemy.orm import relationship
 
 
